--- a/frontend/taskmanager/src/index.css
+++ b/frontend/taskmanager/src/index.css
@@ -1,2 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
+
+
+@theme{
+  --font-heading : "Oswald";
+  --font-para: "Montserrat"; 
+  --color-blue:#006dff;
+  --color-orange : #ff7d2d;
+  
+   
+  
+}
